# PolicySynth

./: CITATION.cff  LICENSE  README.md  __init__.py  data.py  evaluate.py  pyproject.toml  quickstart.py  ssf.py
docs/: strategy_simulation_fidelity.md
examples/: quickstart.py
src/policysynth/: __init__.py  config.py  generator.py
src/policysynth/datasets/: __init__.py
tests/: test_smoke.py
